idea/testData/multiModuleHighlighting/multiplatform/basic/common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] 'header' class 'My' has no implementation in module jvm for JVM">My</error> {

}
